*SVN*

* Add documentation for :encoding option to mysql adapter. [marclove]

* Added short-hand declaration style to migrations (inspiration from Sexy Migrations, http://errtheblog.com/post/2381) [DHH]. Example:

    create_table "products" do |t|
      t.column "shop_id",    :integer
      t.column "creator_id", :integer
      t.column "name",       :string,   :default => "Untitled"
      t.column "value",      :string,   :default => "Untitled"
      t.column "created_at", :datetime
      t.column "updated_at", :datetime
    end
  
  ...can now be written as:
  
    create_table :products do |t|
      t.integer :shop_id, :creator_id
      t.string  :name, :value, :default => "Untitled"
      t.timestamps
    end
    
  Note: Schema dumping still happens in the old style -- someone care to update it?

* Use association name for the wrapper element when using .to_xml.  Previous behavior lead to non-deterministic situations with STI and polymorphic associations. [Koz, jstrachan]

* Improve performance of calling .create on has_many :through associations. [evan]

* Improved cloning performance by relying less on exception raising #8159 [Blaine]

* Added ActiveRecord::Base.inspect to return a column-view like #<Post id:integer, title:string, body:text> [DHH]

* Added yielding of Builder instance for ActiveRecord::Base#to_xml calls [DHH]

* Small additions and fixes for ActiveRecord documentation.  Closes #7342 [jeremymcanally]

* Add helpful debugging info to the ActiveRecord::StatementInvalid exception in ActiveRecord::ConnectionAdapters::SqliteAdapter#table_structure.  Closes #7925. [court3nay]

* SQLite: binary escaping works with $KCODE='u'.  #7862 [tsuka]

* Base#to_xml supports serialized attributes.  #7502 [jonathan]

* Base.update_all :order and :limit options. Useful for MySQL updates that must be ordered to avoid violating unique constraints.  [Jeremy Kemper]
